# visual-analysis-of-big-time-series-datasets

./: .envrc  .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  poetry.toml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  shell.nix
nix/: sources.json
notebooks/: 1_preprocessing_and_feature_extraction.ipynb  2_electric_consumption_analysis.ipynb  README.md  classification_feature_dtw.ipynb  generate_images.ipynb  hdbscan_images.ipynb  images_power_consumption.ipynb  ucr_distances.ipynb  ucr_meta_data.ipynb  usage_example.ipynb
notebooks/ucr_tests/: Classification only FDTW.ipynb  Classification.ipynb  Create Features - DTW.ipynb  Create Features - fastDTW.ipynb  Create Features - itakuraDTW.ipynb  Create Features - sakoechibaDTW.ipynb  classification_feature_dtw.ipynb  classification_one_per_class.ipynb  classification_random_fdtw.ipynb  classification_randomly_selected_prototypes.ipynb  classification_regression_selection.ipynb  comparison_accuracy_fdtw.ipynb  ucr_distances.ipynb  ucr_meta_data.ipynb
results/: classification_1nn_fdtw_regress_fdtw.csv  classification_fdtw_linear_reg.csv  classification_feature_dd_dtw.csv  classification_feature_dtw.csv  classification_one_from_class.csv  classification_select_features_fdtw.csv
results/old_results/: classification_featuredtw.csv  classification_random_sqrt.csv
src/feature_dtw/: __init__.py  fdtw.py  metrics.py  notebook.py
thesis/: fi-lualatex.tex  fi-pdflatex.tex  fithesis3.cls
thesis/bib/: 1_distance_measures.bib  2_visual.bib  (+2 more)
(+7 files in other folders)
